--- a/LAWS.html
+++ b/LAWS.html
@@ -7,25 +7,25 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" />
 </head>
 <body class="bg-gray-50 font-sans">
-  <div class="max-w-5xl mx-auto p-6">
+  <div class="max-w-6xl mx-auto p-6">
     <div class="flex flex-col md:flex-row items-center justify-between mb-4 gap-2">
       <div id="language-container"></div>
+      <select id="year" class="border p-2 rounded"></select>
       <select id="category" class="border p-2 rounded"></select>
       <input id="search" type="text" class="border p-2 rounded w-full md:w-1/3" />
     </div>
-
     <div id="laws" class="text-sm text-gray-700">Loading...</div>
   </div>
 
   <script>
     const SUPABASE_URL = 'https://tdvimwqotnuvcdvhvbjj.supabase.co';
-    const API_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRkdmltd3FvdG51dmNkdmh2YmpqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDkxMDY2MjcsImV4cCI6MjA2NDY4MjYyN30.CWNPk-S-ECq0c1LRugDJYOchY3mgC2Zchyr8X8-mDeE';
+    const API_KEY = 'your-api-key-here';
 
     const labels = {
-      en: { lawId: "Law ID:", category: "Category:", published: "Published:", search: "Search laws..." },
-      fa: { lawId: "شناسه:", category: "دسته‌بندی:", published: "تاریخ انتشار:", search: "جستجوی قوانین..." },
-      tr: { lawId: "Kanun No:", category: "Kategori:", published: "Yayın Tarihi:", search: "Kanunlarda ara..." },
-      ru: { lawId: "ID закона:", category: "Категория:", published: "Дата публикации:", search: "Поиск по законам..." }
+      en: { lawId: "Law ID:", category: "Category:", published: "Published:", search: "Search laws...", download: "Download PDF", year: "Year", allYears: "All Years" },
+      fa: { lawId: "شناسه:", category: "دسته‌بندی:", published: "تاریخ انتشار:", search: "جستجوی قوانین...", download: "دانلود PDF", year: "سال", allYears: "همه سال‌ها" },
+      tr: { lawId: "Kanun No:", category: "Kategori:", published: "Yayın Tarihi:", search: "Kanunlarda ara...", download: "PDF indir", year: "Yıl", allYears: "Tüm Yıllar" },
+      ru: { lawId: "ID закона:", category: "Категория:", published: "Дата публикации:", search: "Поиск по законам...", download: "Скачать PDF", year: "Год", allYears: "Все годы" }
     };
 
     const languageOptions = {
@@ -59,6 +59,7 @@
       const html = document.documentElement;
       const body = document.body;
       const searchInput = document.getElementById('search');
+      const yearSelect = document.getElementById('year');
 
       if (lang === 'fa') {
         html.setAttribute('dir', 'rtl');
@@ -69,10 +70,36 @@
       }
 
       searchInput.placeholder = labels[lang].search;
+
+      // تنظیم لیبل "همه سال‌ها"
+      if (yearSelect.firstChild) {
+        yearSelect.firstChild.textContent = labels[lang].allYears;
+      }
     }
 
-    async function loadCategories() {
-      const lang = document.getElementById('language').value;
+    async function loadYears(lang) {
+      const res = await fetch(`${SUPABASE_URL}/rest/v1/laws?select=year&order=year.desc`, {
+        headers: { apikey: API_KEY, Authorization: `Bearer ${API_KEY}` }
+      });
+      const data = await res.json();
+      const years = [...new Set(data.map(row => row.year))].filter(Boolean).sort((a, b) => b - a);
+
+      const yearSelect = document.getElementById('year');
+      yearSelect.innerHTML = '';
+      const allOption = document.createElement('option');
+      allOption.value = '';
+      allOption.textContent = labels[lang].allYears;
+      yearSelect.appendChild(allOption);
+
+      years.forEach(y => {
+        const opt = document.createElement('option');
+        opt.value = y;
+        opt.textContent = y;
+        yearSelect.appendChild(opt);
+      });
+    }
+
+    async function loadCategories(lang) {
       const res = await fetch(`${SUPABASE_URL}/rest/v1/law_categories`, {
         headers: { apikey: API_KEY, Authorization: `Bearer ${API_KEY}` }
       });
@@ -96,6 +123,7 @@
       const lang = document.getElementById('language').value;
       const t = labels[lang];
       const selectedCat = document.getElementById('category').value;
+      const selectedYear = document.getElementById('year').value;
       const search = document.getElementById('search').value.toLowerCase();
 
       const [lawsRes, catsRes] = await Promise.all([
@@ -113,7 +141,10 @@
       container.innerHTML = '';
 
       laws
-        .filter(law => !selectedCat || (law.categories_original || []).includes(parseInt(selectedCat)))
+        .filter(law => {
+          return (!selectedCat || (law.categories_original || []).includes(parseInt(selectedCat))) &&
+                 (!selectedYear || law.year == selectedYear);
+        })
         .filter(law => {
           const title =
             lang === 'fa' ? law.title_fa :
@@ -153,14 +184,15 @@
             </h2>
             <p class="text-gray-600 text-sm mb-1"><strong>${t.lawId}</strong> ${law.law_id}</p>
             <p class="text-gray-600 text-sm mb-1"><strong>${t.category}</strong> ${catNames}</p>
-            <p class="text-gray-500 text-sm"><strong>${t.published}</strong> ${law.publish_date}</p>
+            <p class="text-gray-500 text-sm mb-2"><strong>${t.published}</strong> ${law.publish_date}</p>
+            <a href="${law.pdf_url_source}" target="_blank" class="text-blue-500 underline float-${lang === 'fa' ? 'left' : 'right'}">${t.download}</a>
           `;
 
           container.appendChild(div);
         });
 
       if (container.innerHTML === '') {
-        container.innerHTML = '<p class="text-gray-500">نتیجه‌ای پیدا نشد.</p>';
+        container.innerHTML = '<p class="text-gray-500">نتیجه‌ای یافت نشد.</p>';
       }
     }
 
@@ -172,7 +204,10 @@
       updateDirectionAndLabels(savedLang);
 
       setTimeout(() => {
-        loadCategories().then(loadLaws);
+        Promise.all([
+          loadYears(savedLang),
+          loadCategories(savedLang)
+        ]).then(loadLaws);
       }, 10);
 
       document.addEventListener('change', (e) => {
@@ -181,11 +216,14 @@
           localStorage.setItem('selectedLanguage', newLang);
           buildLanguageSelector(newLang);
           updateDirectionAndLabels(newLang);
-          loadCategories().then(loadLaws);
+          loadYears(newLang);
+          loadCategories(newLang).then(loadLaws);
+        }
+        if (e.target.id === 'year' || e.target.id === 'category') {
+          loadLaws();
         }
       });
 
-      document.getElementById('category').addEventListener('change', loadLaws);
       document.getElementById('search').addEventListener('input', loadLaws);
     };
   </script>
